--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,7 +165,7 @@ h1 {
     font-weight: 100;
 }
 
-article a {
+a {
     color: white;
 }
 
@@ -183,11 +183,22 @@ footer h3 {
     padding: 0;
     margin: 0;
 }
+header h1 a { text-decoration: none; }
+header h2 {
+    font-weight: 100;
+}
+
 
 section.list li {
     list-style: none;
     margin-bottom: 0.2em;
     padding-left: 0.5em;
+
+    /* this is very suspicious and wrong. FIXME */
+    max-width: 200px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 section.list ul {
     margin: 0;
@@ -214,7 +225,9 @@ section.bignumber hr {
     opacity: 0.3;
 }
 
-
+ul.repolist {
+    list-style: none;
+}
 
 
 
