Structure in place for contributor dashboard, and a couple of widgets

--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -1,6 +1,6 @@
 {{> header.tmpl}}
                 {{#widgets}}
-                <article data-widget="{{widget}}">
+                <article data-widget="{{widget}}"{{#extraClasses}} class="{{extraClasses}}"{{/extraClasses}}>
                     {{{html}}}
                 </article>
                 {{/widgets}}
