Add PHP admin database handler; add new 'add a note about a person' widget

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -7,5 +7,6 @@
                 <h3>Jeremypanel 2017</h3>
             </footer>
         </div>
+    <script src="assets/js/main.js"></script>
     </body>
 </html>
