--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -7,6 +7,7 @@
                 <h3>Jeremypanel 2017</h3>
             </footer>
         </div>
-    <script src="assets/js/main.js"></script>
+    <script>var BASE_API_URL = "$$BASEURL$$/api.php";</script>
+    <script src="$$BASEURL$$/assets/js/main.js"></script>
     </body>
 </html>
