--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -10,14 +10,14 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/normalize.min.css">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="$$BASEURL$$/assets/css/normalize.min.css">
+        <link rel="stylesheet" href="$$BASEURL$$/assets/css/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
         <script>
         Chart.defaults.global.legend.display = false;
         </script>
         <!--[if lt IE 9]>
-            <script src="assets/js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
+            <script src="$$BASEURL$$/assets/js/vendor/html5-3.6-respond-1.4.2.min.js"></script>
         <![endif]-->
     </head>
     <body>
@@ -39,6 +39,7 @@
                 </nav>
                 -->
             </header>
+            <section id="flash_messages"></section>
         </div>
 
         <div class="main-container">
