--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -27,7 +27,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title"><a href="index.html">Jeremypanel</a></h1>
+                <h1 class="title"><a href="$$BASEURL$$/index.html">Jeremypanel</a></h1>
                 <nav><h2>{{subtitle}}</h2></nav>
                 <!--
                 <nav>
