--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,7 +304,116 @@ article a[href^="https://github.com"]::before {
    content: "⬀ ";
 }
 
+input[type=range].adjustable-graph-slider {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+}
+input[type=range].adjustable-graph-slider:focus {
+  outline: none;
+}
+input[type=range].adjustable-graph-slider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: white;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+  border-width: 0;
+}
+input[type=range].adjustable-graph-slider::-webkit-slider-thumb {
+  border-width: 0;
+  height: 26px;
+  width: 16px;
+  border-radius: 3px;
+  background: rgba(255,255,255,0.8);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -12px;
+}
+input[type=range].adjustable-graph-slider:focus::-webkit-slider-runnable-track {
+  background: white;
+}
+input[type=range].adjustable-graph-slider::-moz-range-track {
+  width: 100%;
+  height: 2;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: white;
+  border-radius: 1.3px;
+  border: -width: 0;
+}
+input[type=range].adjustable-graph-slider::-moz-range-thumb {
+  border: 1px solid #000000;
+  border-width: 0;
+  height: 26px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range].adjustable-graph-slider::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range].adjustable-graph-slider::-ms-fill-lower {
+  background: #2a6495;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].adjustable-graph-slider::-ms-fill-upper {
+  background: #3071a9;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range].adjustable-graph-slider::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range].adjustable-graph-slider:focus::-ms-fill-lower {
+  background: #3071a9;
+}
+input[type=range].adjustable-graph-slider:focus::-ms-fill-upper {
+  background: #367ebd;
+}
 
+ul.adjustable-graph-chooser { margin: 0 auto; padding: 0; text-align: center; }
+ul.adjustable-graph-chooser li {
+    margin: 0; padding: 0;
+    list-style: none;
+    display: inline-block;
+    border: 2px solid rgba(255,255,255,0.2);
+}
+ul.adjustable-graph-chooser li input { display: none; }
+ul.adjustable-graph-chooser li label {
+    display: inline-block;
+    padding: 0.3em 0.5em;
+}
+ul.adjustable-graph-chooser li input:checked + label {
+    background: rgba(255,255,255,0.5);
+    color: black;
+}
+ul.adjustable-graph-chooser li:first-of-type, ul.adjustable-graph-chooser li:first-of-type label {
+    border-radius: 50px 0 0 50px;
+}
+ul.adjustable-graph-chooser li:last-of-type, ul.adjustable-graph-chooser li:last-of-type label {
+    border-radius: 0 50px 50px 0;
+}
 
 /* ==========================================================================
    Media Queries
