Add link to big numbers

--- a/templates/bignumber.tmpl
+++ b/templates/bignumber.tmpl
@@ -1,7 +1,7 @@
 <section class="bignumber">
 <h1>{{title}}</h1>
 <big>{{bignumber}}</big>
-<p>{{unit}}</p>
+<p>{{unit}} <a href="{{link}}"> </a></p>
 <hr>
 <small>{{changename}}: <strong>{{changeamount}}</strong></small>
 </section>
