--- a/templates/orgs.tmpl
+++ b/templates/orgs.tmpl
@@ -1,5 +1,5 @@
 <section class="orgs" data-login="{{login}}">
-<h1>Organisations</h1>
+<h1>Organizations</h1>
 <button>Add to an org</button>
 <div class="cont"></div>
 <ul class="them"></ul>
