--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -1,4 +1,5 @@
 {{> header.tmpl}}
+<h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}">{{includeExcludeOrgText}}</a></h2>
                 {{#widgets}}
                 <article data-widget="{{widget}}"{{#extraClasses}} class="{{extraClasses}}"{{/extraClasses}}>
                     {{{html}}}
