Add hoursToRespond item in config.yaml (defined in config.yaml.example) which draws a horizontal line on time graphs for how long you WANT to take to respond to an issue, so you can see at a glance whether you're managing it.

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -9,6 +9,7 @@
         </div>
     <script>var BASE_API_URL = "$$BASEURL$$/api.php";</script>
     <script src="$$BASEURL$$/assets/js/main.js"></script>
+    <script src="$$BASEURL$$/assets/js/chartjs-plugin-annotation.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-adjustable.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-linkable.js"></script>
     </body>
