Add org-specific dashboards. They don't have many widgets on yet; need to talk to Jeremy and ask what should be on there.

--- a/templates/front.tmpl
+++ b/templates/front.tmpl
@@ -7,6 +7,14 @@
                 {{/links}}
                 </ul>
             </section>
+            <section>
+                <h1>Organisations</h1>
+                <ul class="repolist">
+                {{#orgs}}
+                <li><a href="{{link}}">{{title}}</a></li>
+                {{/orgs}}
+                </ul>
+            </section>
             <h1>Overall statistics</h1>
 
             <div class="main wrapper clearfix">
