That's Liza with a z not Lisa with an s

--- a/templates/front.tmpl
+++ b/templates/front.tmpl
@@ -8,7 +8,7 @@
                 </ul>
             </section>
             <section>
-                <h1>Organisations</h1>
+                <h1>Organizations</h1>
                 <ul class="repolist">
                 {{#orgs}}
                 <li><a href="{{link}}">{{title}}</a></li>
