First cut of new design

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,12 +131,12 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 
 body {
-    background-color: #171a29;
+    background-color: #222529;
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 300;
 }
 
@@ -144,35 +144,69 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-content: stretch;
     align-items: stretch;
 }
 
+header.wrapper {
+    width: 100%;
+    padding: 0 5%;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #303439;
+}
+h1.title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 5%;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+nav + nav {
+    background-color: #3b4045;
+    overflow: auto;
+    box-sizing: border-box;
+    margin-left: -5.5555%;
+    width: 111.1111%;
+}
+nav + nav ul li a {
+    background-color: transparent;
+    padding: 10px 2%;
+    font-weight: normal;
+    font-size: 90%;
+}
+
 article {
-    background-color: #25273e;
+    background-color: #393e44;
+    border-radius: 6px;
+    box-sizing: border-box;
     padding: 1em;
-    margin: 0.5em;
-    text-transform: uppercase;
-    color: #595b72;
+    margin: 0.5em 0;
+    color: white;
     font-weight: 300;
     position: relative;
-    padding-top: 3.5em;
-    flex: 0 1 25%;
-    max-height: 30em;
+    padding-top: 2.5em;
+    flex: 0 1 32%;
+    max-height: 21em;
     overflow-y: auto;
     overflow-x: hidden;
+    box-shadow: 4px 4px 9px rgba(0,0,0,0.5);
 }
 
-article.wide { flex: 0 1 50%; }
-
-h1 {
-    font-weight: 100;
+article canvas {
+    max-height: 12em;
 }
 
-a {
-    color: white;
-}
+article.wide { flex: 0 1 66%; }
+
+h1 { font-weight: 300; }
+
+a { color: white; text-decoration: none;}
 
 footer h3 {
     font-weight: 100;
@@ -183,15 +217,41 @@ footer h3 {
 .main article h1 {
     font-size: 100%;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 10px;
+    left: 10px;
     padding: 0;
     margin: 0;
-    color: #aa0;
+    color: white;
 }
 header h1 a { text-decoration: none; }
 header h2 {
     font-weight: 100;
+    margin: 0;
+    padding: 0;
+}
+h1.title, header h2 {
+    padding: 1em 0;
+}
+
+nav + nav li a::before {
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    margin-right: 5px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: "";
+    vertical-align: bottom;
+}
+nav + nav li a.nav-repos::before {
+  background-image: url(../img/Dashboards.svg);
+}
+nav li a.nav-orgs::before { 
+    background-image: url(../img/Groups.svg);
+}
+nav li a.nav-overview::before { 
+    background-image: url(../img/Overview.svg);
 }
 
 
@@ -199,9 +259,9 @@ section.list li {
     list-style: none;
     margin-bottom: 0.2em;
     padding-left: 0.5em;
+    border-bottom: 1px solid #666666;
+    font-size: 90%;
 
-    /* this is very suspicious and wrong. FIXME */
-    max-width: 200px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -222,17 +282,13 @@ section.bignumber big {
     font-size: 400%;
     color: white;
     font-weight: 100;
+    margin: 0.3em 0;
+    display: inline-block;
 }
 section.bignumber p {
-    font-weight: bold;
+    font-weight: normal;
     margin: 0.5em;
-}
-section.bignumber hr {
-    max-width: 10%;
-    margin: 2em auto;
-    border: 1px solid #595b72;
-    border-width: 1px 0 0 0;
-    opacity: 0.3;
+    color: #999999;
 }
 
 section.dl dd {
@@ -249,10 +305,11 @@ ul.repolist {
 
 #flash_messages {
     position: absolute;
-    top: 50px;
-    left: 10%;
-    right: 10%;
+    top: 20px;
+    left: 5%;
+    right: 5%;
     z-index: 2;
+    pointer-events: none;
 }
 
 #flash_messages button {
@@ -392,12 +449,14 @@ input[type=range].adjustable-graph-slider:focus::-ms-fill-upper {
   background: #367ebd;
 }
 
-ul.adjustable-graph-chooser { margin: 0 auto; padding: 0; text-align: center; }
+ul.adjustable-graph-chooser {
+    margin: 0 auto 1em; padding: 0;
+    font-size: 80%;
+}
 ul.adjustable-graph-chooser li {
     margin: 0; padding: 0;
     list-style: none;
     display: inline-block;
-    border: 2px solid rgba(255,255,255,0.2);
 }
 ul.adjustable-graph-chooser li input { display: none; }
 ul.adjustable-graph-chooser li label {
@@ -405,14 +464,8 @@ ul.adjustable-graph-chooser li label {
     padding: 0.3em 0.5em;
 }
 ul.adjustable-graph-chooser li input:checked + label {
-    background: rgba(255,255,255,0.5);
-    color: black;
-}
-ul.adjustable-graph-chooser li:first-of-type, ul.adjustable-graph-chooser li:first-of-type label {
-    border-radius: 50px 0 0 50px;
-}
-ul.adjustable-graph-chooser li:last-of-type, ul.adjustable-graph-chooser li:last-of-type label {
-    border-radius: 0 50px 50px 0;
+    color: #4dced0;
+    border-bottom: 2px solid #4dced0;
 }
 
 h2.incexcorg {
@@ -465,53 +518,6 @@ h2.incexcorg img {
 
     .oldie nav a {
         margin: 0 0.7%;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-
-/* ====================
-    WIDE: CSS3 Effects
-   ==================== */
-
-
-/* ============
-    WIDE: Menu
-   ============ */
-
-    .title {
-        float: left;
-    }
-
-    nav {
-        float: right;
-        width: 38%;
-    }
-
-/* ============
-    WIDE: Main
-   ============ */
-
-    .main article {
-        float: left;
-        width: 57%;
-    }
-
-    .main aside {
-        float: right;
-        width: 28%;
-    }
-}
-
-@media only screen and (min-width: 1140px) {
-
-/* ===============
-    Maximal Width
-   =============== */
-
-    .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
     }
 }
 
