--- a/templates/mainlessheader.tmpl
+++ b/templates/mainlessheader.tmpl
@@ -26,17 +26,15 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title"><a href="$$BASEURL$$/index.html">Jeremypanel</a></h1>
+                <h1 class="title"><a href="$$BASEURL$$/index.html">JP</a></h1>
                 <nav><h2>{{subtitle}}</h2></nav>
-                <!--
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a class="nav-overview" href="$$BASEURL$$/index.html">Overview</a></li>
+                        <li><a class="nav-repos" href="$$BASEURL$$/repositories.html">Repositories</a></li>
+                        <li><a class="nav-orgs" href="$$BASEURL$$/organizations.html">Organizations</a></li>
                     </ul>
                 </nav>
-                -->
             </header>
             <section id="flash_messages"></section>
         </div>
