--- a/templates/front.tmpl
+++ b/templates/front.tmpl
@@ -1,21 +1,5 @@
 {{> mainlessheader.tmpl}}
-            <section>
-                <h1>Dashboards</h1>
-                <ul class="repolist">
-                {{#links}}
-                <li><a href="{{link}}">{{title}}</a></li>
-                {{/links}}
-                </ul>
-            </section>
-            <section>
-                <h1>Organizations</h1>
-                <ul class="repolist">
-                {{#orgs}}
-                <li><a href="{{link}}">{{title}}</a></li>
-                {{/orgs}}
-                </ul>
-            </section>
-            <h1>Overall statistics</h1>
+            <h1>Overview</h1>
 
             <div class="main wrapper clearfix">
                 <h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}" onclick="setInclude({{#excludeOrg}}'include-org'{{/excludeOrg}}{{^excludeOrg}}'exclude-org'{{/excludeOrg}})">{{#excludeOrg}}<img src="$$BASEURL$$/assets/img/cross.svg" alt="No: ">{{/excludeOrg}}{{^excludeOrg}}<img src="$$BASEURL$$/assets/img/tick.svg" alt="Yes: ">{{/excludeOrg}}Contributions from the organization included</a></h2>                {{#widgets}}
