--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,7 +191,7 @@ article {
     font-weight: 300;
     position: relative;
     padding-top: 2.5em;
-    flex: 0 1 32%;
+    flex: 0 1 100%;
     max-height: 21em;
     overflow-y: auto;
     overflow-x: hidden;
@@ -202,7 +202,20 @@ article canvas {
     max-height: 12em;
 }
 
-article.wide { flex: 0 1 66%; }
+article.wide { flex: 0 1 100%; }
+
+@media only screen and (min-width: 480px) {
+  article { flex: 0 1 49%; }
+  article.wide { flex: 0 1 100%; }
+}
+@media only screen and (min-width: 800px) {
+  article { flex: 0 1 32%; }
+  article.wide { flex: 0 1 66%; }
+}
+@media only screen and (min-width: 1400px) {
+  article { flex: 0 1 24%; }
+  article.wide { flex: 0 1 48%; }
+}
 
 h1 { font-weight: 300; }
 
