--- a/templates/bignumber.tmpl
+++ b/templates/bignumber.tmpl
@@ -1,6 +1,6 @@
 <section class="bignumber">
 <h1>{{title}}</h1>
 <big>{{bignumber}}</big>
-<p>{{unit}} <a href="{{link}}"> </a></p>
+<p>{{unit}} {{#link}}<a href="{{link}}"> </a>{{/link}}</p>
 <small>{{changename}}: <strong>{{changeamount}}</strong></small>
 </section>
