--- a/templates/front.tmpl
+++ b/templates/front.tmpl
@@ -1,8 +1,6 @@
 {{> mainlessheader.tmpl}}
-            <h1>Overview</h1>
-
             <div class="main wrapper clearfix">
-                <h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}" onclick="setInclude({{#excludeOrg}}'include-org'{{/excludeOrg}}{{^excludeOrg}}'exclude-org'{{/excludeOrg}})">{{#excludeOrg}}<img src="$$BASEURL$$/assets/img/cross.svg" alt="No: ">{{/excludeOrg}}{{^excludeOrg}}<img src="$$BASEURL$$/assets/img/tick.svg" alt="Yes: ">{{/excludeOrg}}Contributions from the organization included</a></h2>                {{#widgets}}
+                <h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}" onclick="setInclude({{#excludeOrg}}'include-org'{{/excludeOrg}}{{^excludeOrg}}'exclude-org'{{/excludeOrg}})">Contributions from the organization included {{#excludeOrg}}<img src="$$BASEURL$$/assets/img/cross.svg" alt="No: ">{{/excludeOrg}}{{^excludeOrg}}<img src="$$BASEURL$$/assets/img/tick.svg" alt="Yes: ">{{/excludeOrg}}</a></h2>                {{#widgets}}
                 <article data-widget="{{widget}}"{{#extraClasses}} class="{{extraClasses}}"{{/extraClasses}}>
                     {{{html}}}
                 </article>
