--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -1,6 +1,6 @@
 {{> header.tmpl}}
     {{#includeIncExcOrgSwitch}}
-    <h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}" onclick="setInclude({{#excludeOrg}}'include-org'{{/excludeOrg}}{{^excludeOrg}}'exclude-org'{{/excludeOrg}})">{{#excludeOrg}}<img src="$$BASEURL$$/assets/img/cross.svg" alt="No: ">{{/excludeOrg}}{{^excludeOrg}}<img src="$$BASEURL$$/assets/img/tick.svg" alt="Yes: ">{{/excludeOrg}}Contributions from the organization included</a></h2>
+    <h2 class="incexcorg"><a href="$$BASEURL$$/{{includeExcludeOrgFilename}}" onclick="setInclude({{#excludeOrg}}'include-org'{{/excludeOrg}}{{^excludeOrg}}'exclude-org'{{/excludeOrg}})">Contributions from the organization included {{#excludeOrg}}<img src="$$BASEURL$$/assets/img/cross.svg" alt="No: ">{{/excludeOrg}}{{^excludeOrg}}<img src="$$BASEURL$$/assets/img/tick.svg" alt="Yes: ">{{/excludeOrg}}</a></h2>
     {{/includeIncExcOrgSwitch}}
                 {{#widgets}}
                 <article data-widget="{{widget}}"{{#extraClasses}} class="{{extraClasses}}"{{/extraClasses}}>
