--- a/templates/mainlessheader.tmpl
+++ b/templates/mainlessheader.tmpl
@@ -30,9 +30,9 @@
                 <nav><h2>{{subtitle}}</h2></nav>
                 <nav>
                     <ul>
-                        <li><a class="nav-overview" href="$$BASEURL$$/index.html">Overview</a></li>
-                        <li><a class="nav-repos" href="$$BASEURL$$/repositories.html">Repositories</a></li>
-                        <li><a class="nav-orgs" href="$$BASEURL$$/organizations.html">Organizations</a></li>
+                        <li><a class="nav-overview{{#isOverview}} highlight{{/isOverview}}" href="$$BASEURL$$/index.html"><span>Overview</span></a></li>
+                        <li><a class="nav-repos{{#isRepository}} highlight{{/isRepository}}" href="$$BASEURL$$/repositories.html"><span>Repositories</span></a></li>
+                        <li><a class="nav-orgs{{#isOrganization}} highlight{{/isOrganization}}" href="$$BASEURL$$/organizations.html"><span>Organizations</span></a></li>
                     </ul>
                 </nav>
             </header>
