--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,12 +141,9 @@ body {
 }
 
 .main {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: stretch;
-    align-items: stretch;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr;
 }
 
 header.wrapper {
@@ -191,7 +188,6 @@ article {
     font-weight: 300;
     position: relative;
     padding-top: 2.5em;
-    flex: 0 1 100%;
     max-height: 21em;
     overflow-y: auto;
     overflow-x: hidden;
@@ -201,20 +197,36 @@ article {
 article canvas {
     max-height: 12em;
 }
+article.wide { grid-column: auto / span 2; }
 
-article.wide { flex: 0 1 100%; }
+
+h2.incexcorg {
+    grid-column: auto / span 1;
+    width: 100%;
+    text-align: right;
+    font-size: 1em;
+    font-weight: 100;
+}
+h2.incexcorg a {
+    text-decoration: none;
+}
+h2.incexcorg img {
+    vertical-align: top;
+    height: 24px;
+    margin-left: 5px;
+}
 
 @media only screen and (min-width: 480px) {
-  article { flex: 0 1 49%; }
-  article.wide { flex: 0 1 100%; }
+  .main { grid-template-columns: 1fr 1fr; }
+  h2.incexcorg { grid-column: auto / span 2; }
 }
 @media only screen and (min-width: 800px) {
-  article { flex: 0 1 32%; }
-  article.wide { flex: 0 1 66%; }
+  .main { grid-template-columns: 1fr 1fr 1fr; }
+  h2.incexcorg { grid-column: auto / span 3; }
 }
 @media only screen and (min-width: 1400px) {
-  article { flex: 0 1 24%; }
-  article.wide { flex: 0 1 48%; }
+  .main { grid-template-columns: 1fr 1fr 1fr 1fr; }
+  h2.incexcorg { grid-column: auto / span 4; }
 }
 
 h1 { font-weight: 300; }
@@ -489,20 +501,6 @@ ul.adjustable-graph-chooser li input:checked + label {
     border-bottom: 2px solid #4dced0;
 }
 
-h2.incexcorg {
-    width: 100%;
-    text-align: right;
-    font-size: 1em;
-    font-weight: 100;
-}
-h2.incexcorg a {
-  text-decoration: none;
-}
-h2.incexcorg img {
-  vertical-align: top;
-  height: 24px;
-  margin-left: 5px;
-}
 
 /* ==========================================================================
    Media Queries
