Add the reporting infrastructure, and one very simple example report

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,6 +146,10 @@ body {
   grid-template-columns: 1fr;
 }
 
+.main.report {
+  display: block;
+}
+
 header.wrapper {
     width: 100%;
     padding: 0 5%;
@@ -514,7 +518,7 @@ ul.adjustable-graph-chooser li input:checked + label {
 
     nav a {
         float: left;
-        width: 27%;
+        width: 18%;
         margin: 0 1.7%;
         padding: 25px 2%;
         margin-bottom: 0;
