Make the add-to-org widget less rubbish. Allow specifying a date range for joining and leaving an org. Make pie charts bear some resemblance to reality. Make pie charts pay attention to org join/leave daterange.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,10 @@ body {
     font-weight: 300;
 }
 
+section button, section input, section select {
+  color: black;
+}
+
 .main {
   display: grid;
   grid-gap: 10px;
