--- a/templates/mainlessheader.tmpl
+++ b/templates/mainlessheader.tmpl
@@ -33,6 +33,7 @@
                         <li><a class="nav-overview{{#isOverview}} highlight{{/isOverview}}" href="$$BASEURL$$/index.html"><span>Overview</span></a></li>
                         <li><a class="nav-repos{{#isRepository}} highlight{{/isRepository}}" href="$$BASEURL$$/repositories.html"><span>Repositories</span></a></li>
                         <li><a class="nav-orgs{{#isOrganization}} highlight{{/isOrganization}}" href="$$BASEURL$$/organizations.html"><span>Organizations</span></a></li>
+                        <li><a class="nav-teams{{#isTeam}} highlight{{/isTeam}}" href="$$BASEURL$$/teams.html"><span>Teams</span></a></li>
                         <li><a class="nav-orgs{{#isReport}} highlight{{/isReport}}" href="$$BASEURL$$/reports.html"><span>Reports</span></a></li>
                     </ul>
                 </nav>
