--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -12,5 +12,6 @@
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-annotation.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-adjustable.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-linkable.js"></script>
+    <script src="$$BASEURL$$/assets/js/sorttable.js"></script>
     </body>
 </html>
