Add input type=date polyfill because Firefox still doesn't support date inputs (re #21)

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -13,5 +13,6 @@
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-adjustable.js"></script>
     <script src="$$BASEURL$$/assets/js/chartjs-plugin-linkable.js"></script>
     <script src="$$BASEURL$$/assets/js/sorttable.js"></script>
+    <script src="$$BASEURL$$/assets/js/nodep-date-input-polyfill.dist.js"></script>
     </body>
 </html>
